--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
             <input type="file" id="apkFile" name="apkFile" accept=".apk">
             <button type="button" onclick="uploadFile()">Upload</button>
         </form>
-        <div id="downloadLink" class="hidden">
-            <h2>Download Link:</h2>
-            <a id="downloadUrl" href="#" download>Download APK</a>
+        <div id="downloadLinks">
+            <h2>Download Links:</h2>
+            <!-- Download links will be appended here -->
         </div>
     </div>
     <script src="scripts.js"></script>
 </body>
 </html>
+
